Overall performance and class structure changes